@@ -410,12 +410,6 @@ C<static method dump_peer_certificate : string ();>
 
 Returns the same output of Perl's L<Net::SSLeay#dump_peer_certificate|https://metacpan.org/dist/Net-SSLeay/view/lib/Net/SSLeay.pod#Convenience-routines> function.
 
-=head2 get_tlsext_status_type
-
-C<method get_tlsext_status_type : long ();>
-
-Calls native L<SSL_get_tlsext_status_type|https://docs.openssl.org/master/man3/SSL_CTX_set_tlsext_status_cb> function given the pointer value of the instance, and returns its return value.
-
 =head2 DESTROY
 
 C<method DESTROY : void ();>
